--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,9 +15,7 @@
     // Для абсолютного импорта
     "baseUrl": ".",
     "paths": {
-      "*": [
-        "./src/*"
-      ]
+      "*": ["./src/*"]
     },
     // esModuleInterop позволяет работать с пакетами, которые используют
     // common js как с обычными пакета с помощью import (require() module.export) = common js
@@ -42,6 +40,8 @@
   },
   "include": [
     "./config/jest/setupTests.ts",
-    "src"
+    "./src/**/*.ts",
+    "./src/**/*.tsx",
+    "./config/storybook/preview.js"
   ]
 }
