--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
                 node-version: [16.x]
         permissions:
           contents: write
-          pull-request: write
+          pull-requests: write
         steps:
             - uses: actions/checkout@v2
             - name: Staring Node.js ${{matrix.node-version}}
