--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
               run: npm run test:ui:ci
             - name: after
               if: ${{ failure() && steps.screenshots.conclusion == 'failure'}}
-              run: /
+              run: 
                 date > generated.txt
                 git config user.name github-actions
                 git config user.email github-actions@github.com
