--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,10 +7,10 @@ on:
         branches: [master]
 jobs:
     pipeline:
-        runs-on: windows-2019
+        runs-on: ubuntu-22.04
         strategy:
             matrix:
-                node-version: [16.x]
+                node-version: [17.x]
         permissions:
           contents: write
           pull-requests: write
