--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
     "test:unit": "jest --config ./config/jest/jest.config.ts",
     "test:ui": "npx loki test",
-    "test:ui:ci": "loki --requireReference --reactUri file:./storybook-static",
+    "test:ui:ci": "npx loki --requireReference --reactUri file:./storybook-static",
     "test:ui:ok": "npx loki approve",
     "test:ui:reset": "loki --requireReference --reactUri file:./storybook-static && loki approve",
     "storybook": "start-storybook -p 6006 -c ./config/storybook",
