добавили скрипт для удобного просмотра в браузере скриншотных тестов

--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "test:ui:ci": "npx loki --requireReference --reactUri file:./storybook-static",
     "test:ui:ok": "npx loki approve",
     "test:ui:reset": "loki --requireReference --reactUri file:./storybook-static && loki approve",
+    "test:ui:report": "npm run test:ui:report:json && npm run test:ui:report:html",
+    "test:ui:report:json": "node scripts/generate-visual-json-report.js",
+    "test:ui:report:html": "reg-cli --from .loki/report.json --report .loki/report.html",
     "storybook": "start-storybook -p 6006 -c ./config/storybook",
     "storybook:build": "build-storybook -c ./config/storybook"
   },
