--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,18 +26,18 @@ jobs:
               run: npm run build:prod
             - name: ts linting
               run: npm run lint:ts
-              if: always
+              if: always()
             - name: css linting
               run: npm run lint:scss
-              if: always
+              if: always()
             - name: unit testing
               run: npm run test:unit
-              if: always
+              if: always()
             - name: sb build
               run: npm run storybook:build
-              if: always
+              if: always()
             - name: screenshot testing
               run: npm run test:ui:ci
-              if: always
+              if: always()
             
             
