--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test:ui:report:json": "node scripts/generate-visual-json-report.js",
     "test:ui:report:html": "reg-cli --from .loki/report.json --report .loki/report.html",
     "storybook": "start-storybook -p 6006 -c ./config/storybook",
-    "storybook:build": "build-storybook -c ./config/storybook"
+    "storybook:build": "build-storybook -c ./config/storybook",
+    "json-server": "node ./json-server/index.js"
   },
   "keywords": [],
   "author": "",
@@ -65,6 +66,7 @@
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
+    "json-server": "^0.17.2",
     "loki": "^0.31.0",
     "mini-css-extract-plugin": "^2.5.3",
     "reg-cli": "^0.17.7",
